fixed more alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,9 +117,9 @@ h3 {
 }
 
 .wrapper_schedule {
-	width: 250px;
+	width: 240px;
 	margin: 0 auto;
-	padding-left: 30px;
+	padding-left: 40px;
 	text-align: left;
 }
 
@@ -195,7 +195,7 @@ h3 {
 
 #prizes{
 	background: url(../img/slide5.jpg) 50% 0 no-repeat fixed;
-	height: 450px;
+	height: 430px;
 	margin: 0 auto;
 	padding: 80px 0;
 	color: #fff;
@@ -215,11 +215,11 @@ h3 {
 	width: 1100px;
 	margin: 0 auto;
 }
-#about .col .col-1 { float:left; width:28%;  }
+#about .col .col-1 { float:left; width:28%; margin-left: 1% }
 #about .col .col-2 { float:left; width:32%; margin-left: 4% }
 #about .col .col-3 { float:right; width:34%; margin-left: 1% }
 
-#prizes .col .col-1 { float:left; width:30%;  margin-left: 4% }
+#prizes .col .col-1 { float:left; width:30%;  margin-left: 7% }
 #prizes .col .col-2 { float:left; width:24%;  }
 #prizes .col .col-3 { float:left; width:30%; }
 
